<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baidumap</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 登陆界面文本 -->
    <string name="login_title">登 陆 界 面</string>
    <string name="username_label">用户:</string>
    <string name="password_label">密码:</string>
    <string name="remember_label">记住密码</string>
    <string name="login_label">登陆</string>
    <string name="reg_label">注册</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>

    <!-- 注册界面文本 -->
    <string name="reg_title">注 册 界 面</string>
    <string name="repassword_label">确认:</string>
    <string name="sex_label">性别:</string>
    <string name="interest_label">兴趣:</string>
    <string name="address_label">籍贯:</string>
    <string name="brithday_label">生日:</string>
    <string name="repassword_hint">请确认密码</string>
    <string name="male_label">男</string>
    <string name="female_label">女</string>
    <string name="playball_label">打球</string>
    <string name="playcard_label">打牌</string>
    <string name="playgame_label">打游戏</string>
    <string name="selectbirthday_label">选择日期</string>

    <string-array name="province">
        <item>江苏</item>
        <item>山东</item>
        <item>浙江</item>
    </string-array>
    <string-array name="city1">
        <item>南京</item>
        <item>无锡</item>
        <item>苏州</item>
    </string-array>
    <string-array name="city2">
        <item>济南</item>
        <item>青岛</item>
        <item>烟台</item>
    </string-array>
    <string-array name="city3">
        <item>杭州</item>
        <item>宁波</item>
        <item>温州</item>
    </string-array>

</resources>