<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundss"
    android:padding="@dimen/activity_horizontal_margin" >

     <TextView
        android:id="@+id/reg_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reg_title"
        android:textColor="#ffffff"
        android:textSize="30sp" /> 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="#ffffff"
            android:text="@string/username_label" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="#ffffff"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="#ffffff"
            android:text="@string/repassword_label" />

        <EditText
            android:id="@+id/repassword_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repassword_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/sex_label" />

        <RadioButton
            android:id="@+id/male_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_label" 
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/female_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_label" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/interest_label" />

        <CheckBox
            android:id="@+id/playball_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playball_label" />

        <CheckBox
            android:id="@+id/playcard_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playcard_label" />

        <CheckBox
            android:id="@+id/playgame_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playgame_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/address_label" />

        <Spinner
            android:id="@+id/province_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/province" />

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/city1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="#ffffff"
            android:text="@string/brithday_label"
            />
        <Button
            android:id="@+id/selectbirthday_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectbirthday_label"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center"
        >
        <Button 
            android:id="@+id/reg_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_label"
            />
        <Button 
            android:id="@+id/login_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            />
    </LinearLayout>

</LinearLayout>